--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,10 @@
   "require": {
     "php": "^7.1|^8.0",
     "ext-json": "*",
-    "guzzlehttp/guzzle": "^6.3|^7.0",
-    "tightenco/collect": "^5.5|^v6.18|^7.0|^8.0"
+    "guzzlehttp/guzzle": "^6.3|^7.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.0|^8.5.5|^9.0",
+    "phpunit/phpunit": "^7.0|^8.5.5|^9.0|^10.0",
     "phpstan/phpstan": "^0.12.43"
   },
   "license": "MIT",
